[package]
name = "nerk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
spin = "0.5.2"
lazy_static = { version = "^1", features = ["spin_no_std"] }
x86_64 = "0.14.2"


[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

# [target.'cfg(target_os = "none")']
# runner = "bootimage runner"

